--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<body style="margin: 0; cursor: none">
+<body style="margin: 0; cursor: none; background-color: black;">
 <div style="position: absolute; font-size: large; color: white;">
 	Score: <span id="score"></span>
 </div>
+<div style="position: fixed; display: flex; align-items: center; justify-content: center; width: 100%; height: 100%; background-color: black; color: white; z-index: 10; font-size: x-large;" id="startbutton" onclick="launch_game()">Press to start</div>
 <script type="text/javascript" src="coffeescript.js"></script>
 <script type="text/javascript" src="three.js"></script>
 
@@ -117,10 +118,15 @@ trial = ->
 
 		render()
 
-do ->
+start_game = ->
 	while true
 		await trial()
 		await new Promise (a) -> setTimeout a, 1000
+
+window.launch_game = ->
+	await document.body.requestFullscreen()
+	document.getElementById("startbutton").remove()
+	start_game()
 </script>
 
 </body>
