--- a/index.html
+++ b/index.html
@@ -1,12 +1,52 @@
-<body style="margin: 0; cursor: none; background-color: black;">
+<html>
+<head>
+<style>
+#startscreen {
+	position: fixed;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	height: 100%;
+	background-color: black;
+	color: white;
+	z-index: 10;
+	font-size: x-large;
+}
+
+#startscreen * {
+	font-size: x-large;
+}
+
+body {
+	margin: 0;
+	background-color: black;
+}
+
+body > canvas {
+	cursor: none;
+}
+</style>
+
+</head>
+<body>
 <div style="position: absolute; font-size: large; color: white;">
 	Score: <span id="score"></span>
 </div>
-<div style="position: fixed; display: flex; align-items: center; justify-content: center; width: 100%; height: 100%; background-color: black; color: white; z-index: 10; font-size: x-large;" id="startbutton" onclick="launch_game()">Press to start</div>
+<div id="startscreen">
+	<form onsubmit="launch_game(); return false;">
+	<input type="text" id="name" placeholder="Session id or name" />
+	<input type="submit" id="startbutton" value="Start"></button>
+	</form>
+</div>
 <script type="text/javascript" src="coffeescript.js"></script>
 <script type="text/javascript" src="three.js"></script>
 
 <script type="text/coffeescript">
+
+# TODO: dehardcode
+LOG_URL = "wss://taupeli.duckdns.org/log"
+
 scene = new THREE.Scene()
 camera = new THREE.OrthographicCamera -1, 1, -1, 1, 0.1, 1000
 camera.position.z = 5
@@ -150,7 +190,7 @@ trial = ->
 			trialdone = 1
 			
 		if trialdone
-			console.log(trialinfo)
+			logger(trialinfo)
 			return
 		
 		
@@ -163,12 +203,33 @@ start_game = ->
 		await new Promise (a) -> setTimeout a, 1000
 
 
-			
+
+logger = (msg) ->
+	console.log msg
+
+get_logger = (name) ->
+	url = LOG_URL + "?name=#{name}"
+	socket = new WebSocket url
+	await new Promise (accept, reject) ->
+		socket.addEventListener "open", -> accept()
+		socket.addEventListener "error", (event) -> reject(event)
+	lgr = (msg) ->
+		console.log msg
+		socket.send JSON.stringify msg
+	return lgr
 
 window.launch_game = ->
+	name = document.getElementById("name").value
+	try
+		logger = await get_logger name
+	catch error
+		console.error "Starting logger failed", error
+		alert "Failed to start logging. Retry."
+		return
+	document.getElementById("startscreen").remove()
 	await document.body.requestFullscreen()
-	document.getElementById("startbutton").remove()
 	start_game()
 </script>
 
 </body>
+</html>
