--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ body > canvas {
 <script type="text/coffeescript">
 
 # TODO: dehardcode
-LOG_URL = "wss://taupeli.duckdns.org/log"
+LOG_URL = "wss://taupeli.duckdns.org/log/"
 
 scene = new THREE.Scene()
 camera = new THREE.OrthographicCamera -1, 1, -1, 1, 0.1, 1000
