--- a/index.html
+++ b/index.html
@@ -144,15 +144,16 @@ trial = ->
 	left.material.color.setHex 0xffffff
 	right.material.color.setHex 0xffffff
 
-	ttc_diff = Math.random() - 0.5
 
 	left_speed = (Math.random() + 0.5)*0.5
 	right_speed = -(Math.random() + 0.5)*0.5
 	
 	left_ttc = Math.abs 1/left_speed
 	right_ttc = Math.abs 1/right_speed
-
-		
+	
+	ttc_diff = left_ttc - right_ttc
+	###	
+	ttc_diff = Math.random() - 0.5
 	right_delay = ttc_diff + left_ttc - right_ttc
 	
 	if right_delay > 0 
@@ -161,7 +162,7 @@ trial = ->
 	else
 		left.position.x += right_delay * left_speed
 		left_ttc = Math.abs left.position.x / left_speed
-
+	###
 	
 	min_ttc = Math.min left_ttc, right_ttc
 
