--- a/index.html
+++ b/index.html
@@ -108,6 +108,14 @@ body > canvas {
 arrow keys (&#8678; &#8680;) which one is first at the center.</p>
 <p>Right answer gives 100 points, wrong answer -200 points.</p>
 <p>Press any key to continue.</p>
+
+<h1>Valitse kriittinen kohde</h1>
+<p>Kohteet tulevat vasemmalta ja oikealta ja lähestyvät keskilinjaa. Ne ovat näkyvissä vain hetken. Valitse 
+nuolinäppäimillä (&#8678; &#8680;) kumpi kohde saavuttaisi ruudun keskilinjan ensin.</p>
+<p>Oikeasta vastauksesta 100 pistettä, Väärästä -200 pistettä.</p>
+<p>Paina jotain näppäintä aloittaaksesi.</p>
+
+
 </div>
 </div>
 
@@ -119,6 +127,15 @@ arrow keys (&#8678; &#8680;) which one is first at the center, or pass giving
 and answer by pressing down  &#8681;.</p>
 <p>Right answer gives 100 points, wrong answer -200 points and passing gives 0 points.</p>
 <p>Press any key to continue.</p>
+
+<h1>Valitse kriittinen kohde tai ohita</h1>
+<p>Kohteet tulevat vasemmalta ja oikealta ja lähestyvät keskilinjaa. Ne ovat näkyvissä vain hetken. Valitse 
+nuolinäppäimillä (&#8678; &#8680;) kumpi kohde saavuttaisi ruudun keskilinjan ensin, tai ohita 
+painamalla alanuolta &#8681; .</p>
+<p>Oikeasta vastauksesta 100 pistettä, väärästä -200 pistettä. Ohittamisesta 0 pistettä </p>
+<p>Paina jotain näppäintä aloittaaksesi.</p>
+
+
 </div>
 </div>
 
@@ -129,6 +146,14 @@ and answer by pressing down  &#8681;.</p>
 arrow keys (&#8678; &#8680;) which one is first at the center.</p>
 <p>The faster you decide, the more points you get. Wrong answer gives double negative points.</p>
 <p>Press any key to continue.</p>
+
+<h1>Valitse kriittinen kohde</h1>
+<p>Kohteet tulevat vasemmalta ja oikealta ja lähestyvät keskilinjaa. Valitse nuolinäppäimillä (&#8678; &#8680;) kumpi kohde saavuttaa keskilinjan ensin. </p>
+<p>Nopeammasta vastauksesta saa enemmän pisteitä. Väärästä vastauksesta saa kaksinkertaisen määrän miinuspisteitä.</p>
+<p>Paina jotain näppäintä aloittaaksesi.</p>
+
+
+
 </div>
 </div>
 
@@ -226,9 +251,9 @@ right.position.x = 100
 total_score = 0
 n_trials = 0
 update_score = (score) ->
-	total_score += score
+	total_score += score*100
 	n_trials += 1
-	document.getElementById("score").innerHTML = Math.round(total_score*100)
+	document.getElementById("score").innerHTML = Math.round(total_score)
 
 display_trial_score = (score) -> 
 	document.getElementById("trialscore").innerHTML = Math.round(score*100)
@@ -615,45 +640,49 @@ show_instruction = (id) ->
 		el.addEventListener "click", do_accept
 
 start_game = ->
-	max_trials = 75
-	await show_instruction "forcedinstruction"
-	for i in [0...max_trials]
-		document.getElementById("trial_n").innerHTML = "#{i+1} / #{max_trials}"
-		document.getElementById("trialscore").innerHTML = ""
-		document.getElementById("answerprompt").innerHTML = ""
-		#await trial()
-		await trial_flash_forced()
-		#await trial_flash_nonforced()
-		await new Promise (a) -> setTimeout a, 1000
-	document.getElementById("trial_n").innerHTML = ""
-	document.getElementById("trialscore").innerHTML = ""
-	document.getElementById("answerprompt").innerHTML = ""
-	
-	await show_instruction "nonforcedinstruction"
-	for i in [0...max_trials]
-		document.getElementById("trial_n").innerHTML = "#{i+1} / #{max_trials}"
-		document.getElementById("trialscore").innerHTML = ""
-		document.getElementById("answerprompt").innerHTML = ""
-		#await trial()
-		#await trial_flash_forced()
-		await trial_flash_nonforced()
-		await new Promise (a) -> setTimeout a, 1000
-	document.getElementById("trial_n").innerHTML = ""
-	document.getElementById("trialscore").innerHTML = ""
-	document.getElementById("answerprompt").innerHTML = ""
+	max_trials = 4
+	max_blocks = 75
 
-	await show_instruction "trialinstruction"
-	for i in [0...max_trials]
-		document.getElementById("trial_n").innerHTML = "#{i+1} / #{max_trials}"
+	for b in [0...max_blocks]
+	
+		await show_instruction "forcedinstruction"
+		for i in [0...max_trials]
+			document.getElementById("trial_n").innerHTML = "#{i+1} / #{max_trials}"
+			document.getElementById("trialscore").innerHTML = ""
+			document.getElementById("answerprompt").innerHTML = ""
+			#await trial()
+			await trial_flash_forced()
+			#await trial_flash_nonforced()
+			await new Promise (a) -> setTimeout a, 1000
+		document.getElementById("trial_n").innerHTML = ""
 		document.getElementById("trialscore").innerHTML = ""
 		document.getElementById("answerprompt").innerHTML = ""
-		await trial()
-		#await trial_flash_forced()
-		#await trial_flash_nonforced()
-		await new Promise (a) -> setTimeout a, 1000
-	document.getElementById("trial_n").innerHTML = ""
-	document.getElementById("trialscore").innerHTML = ""
-	document.getElementById("answerprompt").innerHTML = ""
+		
+		await show_instruction "nonforcedinstruction"
+		for i in [0...max_trials]
+			document.getElementById("trial_n").innerHTML = "#{i+1} / #{max_trials}"
+			document.getElementById("trialscore").innerHTML = ""
+			document.getElementById("answerprompt").innerHTML = ""
+			#await trial()
+			#await trial_flash_forced()
+			await trial_flash_nonforced()
+			await new Promise (a) -> setTimeout a, 1000
+		document.getElementById("trial_n").innerHTML = ""
+		document.getElementById("trialscore").innerHTML = ""
+		document.getElementById("answerprompt").innerHTML = ""
+
+		await show_instruction "trialinstruction"
+		for i in [0...max_trials]
+			document.getElementById("trial_n").innerHTML = "#{i+1} / #{max_trials}"
+			document.getElementById("trialscore").innerHTML = ""
+			document.getElementById("answerprompt").innerHTML = ""
+			await trial()
+			#await trial_flash_forced()
+			#await trial_flash_nonforced()
+			await new Promise (a) -> setTimeout a, 1000
+		document.getElementById("trial_n").innerHTML = ""
+		document.getElementById("trialscore").innerHTML = ""
+		document.getElementById("answerprompt").innerHTML = ""
 
 
 
@@ -686,7 +715,7 @@ window.launch_game = ->
 	#await pause_rendered 2
 	await start_game()
 	await document.exitFullscreen()
-	document.getElementById("endscore").innerHTML = Math.round(total_score*100)
+	document.getElementById("endscore").innerHTML = Math.round(total_score)
 	document.getElementById("endscreen").style["display"] = "flex"
 </script>
 
