Trial structure: 25 practice, 3x75 Trial blocks,  instructions indicate practice blocks

--- a/index.html
+++ b/index.html
@@ -103,32 +103,50 @@ body > canvas {
 
 <div class="instruction" id="forcedinstruction">
 <div>
-<h1>Select critical object</h1>
+<h1>TOPELI 2: Select the critical object</h1>
 <p>Objects appear from left and right and are visible for a moment. Select with
 arrow keys (&#8678; &#8680;) which one is first at the center.</p>
 <p>Right answer gives 100 points, wrong answer -200 points.</p>
 <p>Press any key to continue.</p>
 
-<h1>Valitse kriittinen kohde</h1>
+<h1>TOPELI 2: Valitse kriittinen kohde</h1>
 <p>Kohteet tulevat vasemmalta ja oikealta ja lähestyvät keskilinjaa. Ne ovat näkyvissä vain hetken. Valitse 
 nuolinäppäimillä (&#8678; &#8680;) kumpi kohde saavuttaisi ruudun keskilinjan ensin.</p>
 <p>Oikeasta vastauksesta 100 pistettä, Väärästä -200 pistettä.</p>
 <p>Paina jotain näppäintä aloittaaksesi.</p>
 
+</div>
+</div>
+
+<div class="instruction" id="forcedinstruction_practice">
+<div>
+<h1> TOPELI 2: Select the critical object, practice round </h1>
+<p>Objects appear from left and right and are visible for a moment. Select with
+arrow keys (&#8678; &#8680;) which one is first at the center.</p>
+<p>Right answer gives 100 points, wrong answer -200 points.</p>
+<p>Press any key to continue.</p>
+
+<h1> TOPELI 2: Valitse kriittinen kohde,  harjoituskierros</h1>
+<p>Kohteet tulevat vasemmalta ja oikealta ja lähestyvät keskilinjaa. Ne ovat näkyvissä vain hetken. Valitse 
+nuolinäppäimillä (&#8678; &#8680;) kumpi kohde saavuttaisi ruudun keskilinjan ensin.</p>
+<p>Oikeasta vastauksesta 100 pistettä, Väärästä -200 pistettä.</p>
+<p>Paina jotain näppäintä aloittaaksesi.</p>
 
 </div>
 </div>
+
+
 
 <div class="instruction" id="nonforcedinstruction">
 <div>
-<h1>Select critical object or pass</h1>
+<h1>TOPELI 3: Select the critical object or pass</h1>
 <p>Objects appear from left and right and are visible for a moment. Select with
 arrow keys (&#8678; &#8680;) which one is first at the center, or pass giving
 and answer by pressing down  &#8681;.</p>
 <p>Right answer gives 100 points, wrong answer -200 points and passing gives 0 points.</p>
 <p>Press any key to continue.</p>
 
-<h1>Valitse kriittinen kohde tai ohita</h1>
+<h1>TOPELI 3: Valitse kriittinen kohde tai ohita</h1>
 <p>Kohteet tulevat vasemmalta ja oikealta ja lähestyvät keskilinjaa. Ne ovat näkyvissä vain hetken. Valitse 
 nuolinäppäimillä (&#8678; &#8680;) kumpi kohde saavuttaisi ruudun keskilinjan ensin, tai ohita 
 painamalla alanuolta &#8681; .</p>
@@ -139,15 +157,55 @@ painamalla alanuolta &#8681; .</p>
 </div>
 </div>
 
+
+<div class="instruction" id="nonforcedinstruction_practice">
+<div>
+<h1>TOPELI 3: Select the critical object or pass, practice rounds</h1>
+<p>Objects appear from left and right and are visible for a moment. Select with
+arrow keys (&#8678; &#8680;) which one is first at the center, or pass giving
+and answer by pressing down  &#8681;.</p>
+<p>Right answer gives 100 points, wrong answer -200 points and passing gives 0 points.</p>
+<p>Press any key to continue.</p>
+
+<h1>TOPELI 3: Valitse kriittinen kohde tai ohita, harjoituskierros</h1>
+<p>Kohteet tulevat vasemmalta ja oikealta ja lähestyvät keskilinjaa. Ne ovat näkyvissä vain hetken. Valitse 
+nuolinäppäimillä (&#8678; &#8680;) kumpi kohde saavuttaisi ruudun keskilinjan ensin, tai ohita 
+painamalla alanuolta &#8681; .</p>
+<p>Oikeasta vastauksesta 100 pistettä, väärästä -200 pistettä. Ohittamisesta 0 pistettä </p>
+<p>Paina jotain näppäintä aloittaaksesi.</p>
+
+</div>
+</div>
+
+
+
+
 <div class="instruction" id="trialinstruction">
 <div>
-<h1>Select critical object</h1>
+<h1>TOPELI 1: Select the critical object</h1>
 <p>Objects appear from left and right and approach the center. Select with
 arrow keys (&#8678; &#8680;) which one is first at the center.</p>
 <p>The faster you decide, the more points you get. Wrong answer gives double negative points.</p>
 <p>Press any key to continue.</p>
 
-<h1>Valitse kriittinen kohde</h1>
+<h1>TOPELI 1: Valitse kriittinen kohde </h1>
+<p>Kohteet tulevat vasemmalta ja oikealta ja lähestyvät keskilinjaa. Valitse nuolinäppäimillä (&#8678; &#8680;) kumpi kohde saavuttaa keskilinjan ensin. </p>
+<p>Nopeammasta vastauksesta saa enemmän pisteitä. Väärästä vastauksesta saa kaksinkertaisen määrän miinuspisteitä.</p>
+<p>Paina jotain näppäintä aloittaaksesi.</p>
+
+</div>
+</div>
+
+
+<div class="instruction" id="trialinstruction_practice">
+<div>
+<h1>TOPELI 1: Select the critical object, practice rounds</h1>
+<p>Objects appear from left and right and approach the center. Select with
+arrow keys (&#8678; &#8680;) which one is first at the center.</p>
+<p>The faster you decide, the more points you get. Wrong answer gives double negative points.</p>
+<p>Press any key to continue.</p>
+
+<h1>TOPELI 1: Valitse kriittinen kohde, harjoituskierros </h1>
 <p>Kohteet tulevat vasemmalta ja oikealta ja lähestyvät keskilinjaa. Valitse nuolinäppäimillä (&#8678; &#8680;) kumpi kohde saavuttaa keskilinjan ensin. </p>
 <p>Nopeammasta vastauksesta saa enemmän pisteitä. Väärästä vastauksesta saa kaksinkertaisen määrän miinuspisteitä.</p>
 <p>Paina jotain näppäintä aloittaaksesi.</p>
@@ -640,10 +698,70 @@ show_instruction = (id) ->
 		el.addEventListener "click", do_accept
 
 start_game = ->
-	max_trials = 4
-	max_blocks = 75
-
+	max_blocks = 1
+	max_trials = 25
+	
 	for b in [0...max_blocks]
+		await show_instruction "trialinstruction_practice"
+		for i in [0...max_trials]
+			document.getElementById("trial_n").innerHTML = "#{i+1} / #{max_trials}"
+			document.getElementById("trialscore").innerHTML = ""
+			document.getElementById("answerprompt").innerHTML = ""
+			await trial()
+			#await trial_flash_forced()
+			#await trial_flash_nonforced()
+			await new Promise (a) -> setTimeout a, 1000
+		document.getElementById("trial_n").innerHTML = ""
+		document.getElementById("trialscore").innerHTML = ""
+		document.getElementById("answerprompt").innerHTML = ""
+	
+		await show_instruction "forcedinstruction_practice"
+		for i in [0...max_trials]
+			document.getElementById("trial_n").innerHTML = "#{i+1} / #{max_trials}"
+			document.getElementById("trialscore").innerHTML = ""
+			document.getElementById("answerprompt").innerHTML = ""
+			#await trial()
+			await trial_flash_forced()
+			#await trial_flash_nonforced()
+			await new Promise (a) -> setTimeout a, 1000
+		document.getElementById("trial_n").innerHTML = ""
+		document.getElementById("trialscore").innerHTML = ""
+		document.getElementById("answerprompt").innerHTML = ""
+		
+		await show_instruction "nonforcedinstruction_practice"
+		for i in [0...max_trials]
+			document.getElementById("trial_n").innerHTML = "#{i+1} / #{max_trials}"
+			document.getElementById("trialscore").innerHTML = ""
+			document.getElementById("answerprompt").innerHTML = ""
+			#await trial()
+			#await trial_flash_forced()
+			await trial_flash_nonforced()
+			await new Promise (a) -> setTimeout a, 1000
+		document.getElementById("trial_n").innerHTML = ""
+		document.getElementById("trialscore").innerHTML = ""
+		document.getElementById("answerprompt").innerHTML = ""
+
+
+
+	total_score = 0
+		
+	max_blocks = 3
+	max_trials = 75
+	
+	for b in [0...max_blocks]
+
+		await show_instruction "trialinstruction"
+		for i in [0...max_trials]
+			document.getElementById("trial_n").innerHTML = "#{i+1} / #{max_trials}"
+			document.getElementById("trialscore").innerHTML = ""
+			document.getElementById("answerprompt").innerHTML = ""
+			await trial()
+			#await trial_flash_forced()
+			#await trial_flash_nonforced()
+			await new Promise (a) -> setTimeout a, 1000
+		document.getElementById("trial_n").innerHTML = ""
+		document.getElementById("trialscore").innerHTML = ""
+		document.getElementById("answerprompt").innerHTML = ""
 	
 		await show_instruction "forcedinstruction"
 		for i in [0...max_trials]
@@ -671,20 +789,7 @@ start_game = ->
 		document.getElementById("trialscore").innerHTML = ""
 		document.getElementById("answerprompt").innerHTML = ""
 
-		await show_instruction "trialinstruction"
-		for i in [0...max_trials]
-			document.getElementById("trial_n").innerHTML = "#{i+1} / #{max_trials}"
-			document.getElementById("trialscore").innerHTML = ""
-			document.getElementById("answerprompt").innerHTML = ""
-			await trial()
-			#await trial_flash_forced()
-			#await trial_flash_nonforced()
-			await new Promise (a) -> setTimeout a, 1000
-		document.getElementById("trial_n").innerHTML = ""
-		document.getElementById("trialscore").innerHTML = ""
-		document.getElementById("answerprompt").innerHTML = ""
-
-
+		
 
 logger = (msg) ->
 	console.log msg
