--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 	color: white;
 	font-size: xx-large;
 	background-color: black;
+	cursor: none;
 
 }
 
@@ -80,10 +81,12 @@ body > canvas {
 	color: white;
 	z-index: 10;
 	font-size: large;
+	cursor: none;
 }
 
 .instruction > div {
 	width: 50%;
+	cursor: none;
 }
 
 </style>
