--- a/index.html
+++ b/index.html
@@ -714,6 +714,134 @@ trial_flash_nonforced = ->
 		render()
 
 
+
+trial_flash_forced_random_startloc = ->
+	trialtype = 'flash_forced'
+	answertime = 0
+	left.position.x = -1 + Math.random()*0.2
+	right.position.x = 1 - Math.random()*0.2
+	
+	left.material.color.setHex 0xffffff
+	right.material.color.setHex 0xffffff
+
+	[left_speed, right_speed] = get_speeds()
+	
+	
+	left_ttc = Math.abs (left.position.x)/left_speed
+	right_ttc = Math.abs (right.position.x)/right_speed
+	
+	ttc_diff = right_ttc - left_ttc
+	###	
+	ttc_diff = Math.random() - 0.5
+	right_delay = ttc_diff + left_ttc - right_ttc
+	
+	if right_delay > 0 
+		right.position.x += (right_delay * -right_speed)
+		right_ttc = Math.abs right.position.x / right_speed
+	else
+		left.position.x += right_delay * left_speed
+		left_ttc = Math.abs left.position.x / left_speed
+	###
+	
+	min_ttc = Math.min left_ttc, right_ttc
+	disappearlocation = Math.random()*0.5 + 0.2
+
+	side_selected = 0
+	score = undefined
+
+	t = undefined
+	t0 = undefined
+
+	trialinfo =
+		type: trialtype
+		v0: left_speed
+		v1: right_speed
+		x0: left.position.x
+		x1: right.position.x
+		ttcdiff: ttc_diff
+		minttc: min_ttc
+		disappear: disappearlocation
+
+	
+
+
+	trialdone = 0
+	
+	reset_events()
+	while true
+		[time, events] = await next_frame()
+		if not t?
+			t = time
+			t0 = time
+		dt = time - t
+		t = time
+		for event in events
+			# Don't accept keypress unless both objects are visible
+			#if Math.abs(right.position.x) > 1 or Math.abs(left.position.x) > 1
+			if not answertime
+				break
+			if score?
+				break
+			if event.key == "ArrowLeft" or event.touches?[0].clientX < event.target.clientWidth/2
+				side_selected = -1
+				left.material.color.setHex 0xff00ff
+				trialdone = 1
+			else if event.key == "ArrowRight" or event.touches?[0].clientX > event.target.clientWidth/2
+				side_selected = 1
+				right.material.color.setHex 0xff00ff
+				trialdone = 1
+			else
+				break
+			#score = (min_ttc - (t - t0))/min_ttc
+			score = 1
+			if side_selected == Math.sign(ttc_diff)
+				score *= -2
+				trialinfo.correct = 0
+			else if side_selected == -Math.sign(ttc_diff)
+				trialinfo.correct = 1
+			trialinfo.reply_ttc_time = min_ttc - (t-t0)
+			trialinfo.reply_time = (t-t0)
+
+			update_score(score)
+			trialinfo.score = score
+			trialinfo.n_trials = n_trials
+
+		
+		if left.position.x > 0-disappearlocation || right.position.x < 0+disappearlocation 
+			left.position.x = -100
+			right.position.x = 100
+			left_speed = 0
+			right_speed = 0
+			answertime = 1
+			document.getElementById("answerprompt").innerHTML = 'which one first at the center <br>  &#8678; press an arrow key &#8680; '
+			
+		else
+			left.position.x += left_speed * dt
+			right.position.x += right_speed * dt
+		
+
+
+		if left.position.x > 0
+			left.position.x = 0
+			trialdone = 1
+		if right.position.x < 0
+			right.position.x = 0
+			trialdone = 1
+			
+		if trialdone
+			if not score?
+				score = 0
+				update_score(score)
+				trialinfo.score = score
+				trialinfo.n_trials = n_trials
+			display_trial_score(score)
+			logger(trialinfo)
+			return
+		
+	
+		render()
+
+
 show_instruction = (id) ->
 	el = document.getElementById id
 	el.style.display = "flex"
@@ -737,6 +865,7 @@ start_game = ->
 			await trial()
 			#await trial_flash_forced()
 			#await trial_flash_nonforced()
+			#await trial_flash_forced_random_startloc()
 			await new Promise (a) -> setTimeout a, 1000
 		document.getElementById("trial_n").innerHTML = ""
 		document.getElementById("trialscore").innerHTML = ""
