--- a/index.html
+++ b/index.html
@@ -713,6 +713,105 @@ trial_flash_nonforced = ->
 	
 		render()
 
+static_flash_forced = ->
+	trialtype = 'static_flash_forced'
+	answertime = 0
+	
+	
+	left.material.color.setHex 0xffffff
+	right.material.color.setHex 0xffffff
+	
+	maxdiff = 0.1
+	min_dur = 1/30
+	max_dur = 0.3
+	wait_dur = 0.5
+
+	minpos = 1 - maxdiff*2
+	maxpos = maxdiff*2
+	
+	posdiff = (Math.random() - 0.5)*2*maxdiff
+	duration = Math.random()*(max_dur - min_dur) + min_dur
+
+	right_pos = Math.random()*(maxpos - minpos) + minpos
+	left_pos = -right_pos + posdiff
+
+	left.position.x = -100
+	right.position.x = 100
+
+
+	trialinfo =
+		type: trialtype
+		x0: left_pos
+		x1: right_pos
+		posdiff: posdiff
+		duration: duration
+
+	
+
+
+	trialdone = 0
+	
+	reset_events()
+	while true
+		[time, events] = await next_frame()
+		if not t?
+			t = time
+			t0 = time
+		dt = time - t
+		t = time
+		for event in events
+			# Don't accept keypress unless both objects are visible
+			#if Math.abs(right.position.x) > 1 or Math.abs(left.position.x) > 1
+			if not answertime
+				break
+			if score?
+				break
+			if event.key == "ArrowLeft" or event.touches?[0].clientX < event.target.clientWidth/2
+				side_selected = -1
+				left.material.color.setHex 0xff00ff
+				trialdone = 1
+			else if event.key == "ArrowRight" or event.touches?[0].clientX > event.target.clientWidth/2
+				side_selected = 1
+				right.material.color.setHex 0xff00ff
+				trialdone = 1
+			else
+				break
+			#score = (min_ttc - (t - t0))/min_ttc
+			score = 1
+			if side_selected == Math.sign(posdiff)
+				score *= -2
+				trialinfo.correct = 0
+			else if side_selected == -Math.sign(posdiff)
+				trialinfo.correct = 1
+			trialinfo.reply_time = (t-t0)
+
+			update_score(score)
+			trialinfo.score = score
+			trialinfo.n_trials = n_trials
+
+		if t - t0 > duration + wait_dur and not answertime
+			left.position.x = -100
+			right.position.x = 100
+			answertime = 1
+			trialinfo.hidetime = t - t0
+			document.getElementById("answerprompt").innerHTML = 'which one closer to the center <br>  &#8678; press an arrow key &#8680; '
+		else if t - t0 > wait_dur and not answertime
+			left.position.x = left_pos
+			right.position.x = right_pos
+			trialinfo.showtime = t - t0
+		
+		if trialdone
+			if not score?
+				score = 0
+				update_score(score)
+				trialinfo.score = score
+				trialinfo.n_trials = n_trials
+			display_trial_score(score)
+			logger(trialinfo)
+			return
+		
+	
+		render()
 
 
 trial_flash_forced_random_startloc = ->
@@ -945,7 +1044,18 @@ start_game = ->
 		document.getElementById("trialscore").innerHTML = ""
 		document.getElementById("answerprompt").innerHTML = ""
 
-		
+
+start_static_game = ->
+	for i in [0...100]
+		document.getElementById("trialscore").innerHTML = ""
+		document.getElementById("answerprompt").innerHTML = ""
+
+		await static_flash_forced()
+		await new Promise (a) -> setTimeout a, 1000
+
+	document.getElementById("trialscore").innerHTML = ""
+	document.getElementById("answerprompt").innerHTML = ""
+
 
 logger = (msg) ->
 	console.log msg
@@ -982,13 +1092,18 @@ window.launch_game = ->
 		return
 	document.getElementById("startscreen").remove()
 	await document.body.requestFullscreen()
-	
+
+	url = (new URL window.location.href)
 	# Wait a bit before starting
 	#await pause_rendered 2
-	await start_game()
+	if url.searchParams.get("game") == "static_forced"
+		await start_static_game()
+	else
+		await start_game()
 	await document.exitFullscreen()
 	document.getElementById("endscore").innerHTML = Math.round(total_score)
 	document.getElementById("endscreen").style["display"] = "flex"
+
 </script>
 
 </body>
