Retain parameters on restart

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ arrow keys (&#8678; &#8680;) which one is first at the center.</p>
 	<div>
 		Done! Total score <span id="endscore"></span>.
 	</div>
-	<form>
+	<form onsubmit="location.reload(); return false;">
 		<input type="submit" value="Restart"></input>
 	</form>
 	</div>
